Rearranging coremodule and creating header components

--- a/BehanceSoul/src/app/components/header/header.component.html
+++ b/BehanceSoul/src/app/components/header/header.component.html
@@ -1,3 +1,7 @@
 <div class="header">
-
+  <div class="header__wrapper">
+    <app-header-logo></app-header-logo>
+    <app-header-discovery-menu></app-header-discovery-menu>
+    <app-header-user-menu></app-header-user-menu>
+  </div>
 </div>
