Progresso em header + signup-block

--- a/BehanceSoul/src/app/components/header-discovery-menu/header-discovery-menu.component.html
+++ b/BehanceSoul/src/app/components/header-discovery-menu/header-discovery-menu.component.html
@@ -1,3 +1,10 @@
-<p>
-  header-discovery-menu works!
-</p>
+<div class="discoverymenu">
+  <div class="discoverymenu__links">
+    <a class="discoverymenu__link" [routerLink]="['/']">Descobrir</a>
+    <a class="discoverymenu__link" [routerLink]="['/']">Ao vivo</a>
+    <a class="discoverymenu__link" [routerLink]="['/']">Carreiras</a>
+  </div>
+  <div class="discoverymenu__signupblock">
+    <app-header-signup-block></app-header-signup-block>
+  </div>
+</div>
