--- a/BehanceSoul/src/app/components/header-logo/header-logo.component.html
+++ b/BehanceSoul/src/app/components/header-logo/header-logo.component.html
@@ -1,3 +1,5 @@
-<p>
-  header-logo works!
-</p>
+<div class="headerlogo">
+  <a class="headerlogo__link" [routerLink]="['/']">
+    <span class="headerlogo__logo">BehanceSoul</span>
+  </a>
+</div>
