--- a/BehanceSoul/src/styles.scss
+++ b/BehanceSoul/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import './assets/scss/base/reset';
+@import './assets/scss/base/variables';
+@import './assets/scss/base/extends';
+@import './assets/scss/base/format';
