Restruturação de sass e novos componentes

--- a/BehanceSoul/src/app/components/header-signup-block/header-signup-block.component.html
+++ b/BehanceSoul/src/app/components/header-signup-block/header-signup-block.component.html
@@ -1,3 +1,17 @@
-<p>
-  header-signup-block works!
-</p>
+<div class="signup-block">
+  <button class="signup-block__link">Cadastre-se com email</button>
+  <span class="signup-block__or">ou</span>
+  <button class="signup-block__soclink signup-block__soclink--facebook">
+    <span class="signup-block__linkicon">
+      <svg  xmlns="http://www.w3.org/2000/svg" width="8.311" height="16" viewBox="3200 170 8.311 16">
+        <defs><style>#fb1{fill:#fff;}</style></defs>
+        <path id="fb1" d="m5.395 16v-7.3h2.45l0.367-2.846h-2.817v-1.815c0-0.826 0.226-1.384 1.412-1.384h1.5v-2.542a19.964 19.964 0 0 0 -2.192 -0.113 3.425 3.425 0 0 0 -3.658 3.756v2.1h-2.457v2.844h2.457v7.3z" transform="translate(3200 170)"></path>
+      </svg>
+    </span>
+  </button>
+  <button class="signup-block__soclink signup-block__soclink--google">
+    <span class="signup-block__linkicon">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="3236 169 16 16"><defs><style>.cls-1 { fill: #4285f4; } .cls-1, .cls-2, .cls-3, .cls-4, .cls-5 { fill-rule: evenodd; } .cls-2 { fill: #34a853; } .cls-3 { fill: #fbbc05; } .cls-4 { fill: #ea4335; } .cls-5 { fill: none; }</style></defs><g id="Group_3" data-name="Group 3"><path id="Shape" d="M3251.68 177.18a9.192 9.192 0 0 0-.145-1.636H3244v3.095h4.305a3.68 3.68 0 0 1-1.6 2.414v2.006h2.585a7.8 7.8 0 0 0 2.39-5.88z" class="cls-1"></path><path id="Shape-2" d="M3243.996 185a7.638 7.638 0 0 0 5.294-1.938l-2.585-2.007a4.826 4.826 0 0 1-7.185-2.535h-2.673v2.073a8 8 0 0 0 7.15 4.407z" class="cls-2" data-name="Shape"></path><path id="Shape-3" d="M3239.524 178.52a4.73 4.73 0 0 1 0-3.04v-2.072h-2.673a8.01 8.01 0 0 0 0 7.185l2.674-2.073z" class="cls-3" data-name="Shape"></path><path id="Shape-4" d="M3243.996 172.182a4.322 4.322 0 0 1 3.058 1.2l2.295-2.295a7.688 7.688 0 0 0-5.354-2.087 8 8 0 0 0-7.15 4.407l2.674 2.073a4.768 4.768 0 0 1 4.476-3.3z" class="cls-4" data-name="Shape"></path><path id="Shape-5" d="M3236 169h16v16h-16z" class="cls-5" data-name="Shape"></path></g></svg>
+    </span>
+  </button>
+</div>
