--- a/BehanceSoul/src/app/components/header-logo/header-logo.component.scss
+++ b/BehanceSoul/src/app/components/header-logo/header-logo.component.scss
@@ -8,7 +8,8 @@
   }
   &__logo {
     @extend %text-fancy;
-    @extend %text-white-hover;
+    @extend %text-transition;
+    @include whiteHover(color, $colorLightGrey1);
     font-size: 1.5rem;
     display: inline-block;
     line-height: .8;
