Ending header layouting

--- a/BehanceSoul/src/app/components/header-discovery-menu/header-discovery-menu.component.scss
+++ b/BehanceSoul/src/app/components/header-discovery-menu/header-discovery-menu.component.scss
@@ -1,5 +1,6 @@
 @import '../../../assets/scss/base/variables';
 @import '../../../assets/scss/base/extends';
+@import '../../../assets/scss/layout/header';
 
 .discoverymenu {
   @extend %flex-center;
@@ -7,16 +8,6 @@
     padding-right: .66rem;
   }
   &__link {
-    @extend %text-normal;
-    @extend %text-transition;
-    font-size: .9rem;
-    padding: .66em;
-    display: inline-block;
-    font-weight: bold;
-    text-decoration: none;
-    color: $colorLightGrey1;
-    &:hover {
-      color: $colorWhite;
-    }
+    @extend %header__link;
   }
 }
