--- a/BehanceSoul/src/app/components/header-logo/header-logo.component.scss
+++ b/BehanceSoul/src/app/components/header-logo/header-logo.component.scss
@@ -8,7 +8,7 @@
   }
   &__logo {
     @extend %text-fancy;
-    @extend %text-transition;
+    @extend %base-transition;
     @include darkenHover(#fff, 10%, color);
     font-size: 1.5rem;
     display: inline-block;
