--- a/BehanceSoul/src/app/components/header-user-menu/header-user-menu.component.html
+++ b/BehanceSoul/src/app/components/header-user-menu/header-user-menu.component.html
@@ -1,3 +1,13 @@
-<p>
-  header-user-menu works!
-</p>
+<div class="usermenu">
+  <a [routerLink]="['/']" class="usermenu__iconlink">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="5605.991 836 16.958 16.95">
+      <path data-name="Path 150" d="M5612.5 836a6.493 6.493 0 0 1 5.29 10.27l4.88 4.88a1.076 1.076 0 0 1-1.52 1.52l-4.88-4.88a6.5 6.5 0 1 1-3.77-11.79zm0 11a4.5 4.5 0 1 0-4.5-4.5 4.5 4.5 0 0 0 4.5 4.5z"></path>
+    </svg>
+  </a>
+  <a class="usermenu__textlink" [routerLink]="['/']">Fazer login</a>
+  <a [routerLink]="['/']" class="usermenu__iconlink">
+    <svg viewBox="0 0 36 36" focusable="false" aria-hidden="true" role="img">
+      <path d="M10 10H2V3a1 1 0 0 1 1-1h7zm4-8h8v8h-8zm20 8h-8V2h7a1 1 0 0 1 1 1zM2 14h8v8H2zm12 0h8v8h-8zm12 0h8v8h-8zM10 34H3a1 1 0 0 1-1-1v-7h8zm4-8h8v8h-8zm19 8h-7v-8h8v7a1 1 0 0 1-1 1z"></path>
+    </svg>
+  </a>
+</div>
